--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a>
-            </li>
-			<li class="nav-item">
+            </li> -->
+			<!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
-            </li>
+            </li> -->
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contect Me</a>
             </li>
